--- a/src/main/java/com/criollo/machmillenium/vistas/emergentes/clientes/Cuotas.form
+++ b/src/main/java/com/criollo/machmillenium/vistas/emergentes/clientes/Cuotas.form
@@ -21,7 +21,7 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
           </hspacer>
-          <grid id="9538f" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="true" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="9538f" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -35,14 +35,6 @@
                 </constraints>
                 <properties>
                   <text value="Agregar"/>
-                </properties>
-              </component>
-              <component id="5723f" class="javax.swing.JButton" binding="buttonSalir">
-                <constraints>
-                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <text value="Salir"/>
                 </properties>
               </component>
             </children>
@@ -66,7 +58,10 @@
             <children>
               <component id="7d382" class="javax.swing.JTable" binding="tablaCuotas">
                 <constraints/>
-                <properties/>
+                <properties>
+                  <editingColumn value="0"/>
+                  <editingRow value="0"/>
+                </properties>
               </component>
             </children>
           </scrollpane>
